--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <a href="#" class="flex items-center gap-3">
             <div class="w-10 h-10 rounded-full bg-gradient-to-br from-teal-400 to-violet-600 flex items-center justify-center font-bold text-gray-900">RS</div>
             <div class="hidden sm:block">
-              <div class="text-white font-semibold">Rith Sovan</div>
-              <div class="text-xs text-gray-300">Software Engineer — POS & Web</div>
+              <div class="text-white font-semibold">Bunrith Ly</div>
+              <div class="text-xs text-gray-300">Full Stack Developer</div>
             </div>
           </a>
         </div>
@@ -66,7 +66,7 @@
     <section id="about" class="py-8 scroll-mt-20">
       <div class="grid md:grid-cols-2 gap-8 items-center">
         <div>
-          <h1 class="text-4xl sm:text-5xl font-extrabold text-white">Hi — I’m Rith Sovan</h1>
+          <h1 class="text-4xl sm:text-5xl font-extrabold text-white">Hi — I’m Bunrith LY</h1>
           <p class="mt-4 text-gray-300 max-w-xl">I build reliable point-of-sale and management systems for businesses. I enjoy making clean UIs with Flutter and scalable APIs with Laravel & Spring Boot.</p>
 
           <div class="mt-6 flex flex-wrap gap-3">
@@ -194,7 +194,7 @@
       </form>
     </section>
 
-    <footer class="mt-16 text-center text-gray-500 text-sm pb-12">© <span id="year"></span> Rith Sovan — Built with ❤️ and TailwindCSS</footer>
+    <footer class="mt-16 text-center text-gray-500 text-sm pb-12">© <span id="year"></span> Bunrith</footer>
   </main>
 
   <script>
